# starkex-data-availability-committee

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  aerospike.conf  build.sh  config.yml  config_example.yml  docker-compose.yml
scripts/: requirements-deps.json  requirements-gen.txt  requirements.txt
src/services/perpetual/public/: CMakeLists.txt
src/services/perpetual/public/business_logic/: CMakeLists.txt  state_objects.py
src/services/perpetual/public/definitions/: CMakeLists.txt  constants.py  error_codes.py  fields.py
src/starkware/committee/: CMakeLists.txt  config.yml  integration_test.py  perpetual_config.yml  private_key.txt  setup.py
src/starkware/committee/committee/: availability_gateway_client.py  batch_info.json  committee_config.py  committee_test.py  custom_validation.py  dump_trees_utils.py  load_dump_end_to_end_test.py
src/starkware/committee/committee/committee/: __init__.py  __main__.py  committee.py
src/starkware/committee/committee/dump_state/: __init__.py  __main__.py  dump_state.py
src/starkware/committee/committee/dump_trees/: __init__.py  __main__.py  dump_trees.py
src/starkware/committee/committee/load_state/: __init__.py  __main__.py  load_state.py
src/starkware/python/: CMakeLists.txt
src/starkware/starkware_utils/: CMakeLists.txt  availability_claim.py  error_handling.py  field_validators.py  http_handler.py  marshmallow_dataclass_fields.py
src/starkware/starkware_utils/commitment_tree/merkle_tree/: CMakeLists.txt  dump_tree_diff.py  merkle_calculation_node.py  merkle_tree.py  merkle_tree_node.py  test_utils.py
src/starkware/starkware_utils/objects/: CMakeLists.txt  availability.py  data_availability.py  starkex_constants.py  starkex_state.py
src/starkware/storage/: CMakeLists.txt  aerospike.cmake  aerospike_lock.py  aerospike_storage_threadpool.py  storage.py
(+3 files in other folders)
